--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
   </head>
   <body>
     <section class="scene-2">
-      <span>RAIDEN</span>
-      <span>BOSENMORI</span>
-      <span>MEI</span>
+      <span>EVIL</span>
+      <span>DOG</span>
+      <span>PRESENTING</span>
       <div class="circle"></div>
     </section>
 
