--- a/index.html
+++ b/index.html
@@ -14,57 +14,15 @@
     <link rel="stylesheet" href="style.css" />
     <title>Acheron</title>
   </head>
-  <body>
-    <section class="scene-2">
-      <span>EVIL</span>
-      <span>DOG</span>
-      <span>PRESENTING</span>
-      <div class="circle"></div>
-    </section>
-
-    <header>
-      <div class="container">
-        <div class="content">
-          <div class="logo">
-            <h1>Acheron</h1>
-          </div>
-
-          <nav>
-            <a href="#">Overview</a>
-            <a href="#">Combat</a>
-            <a href="#">Lore</a>
-          </nav>
-        </div>
-      </div>
-    </header>
-
-    <section class="hero">
-      <div class="container">
-        <div class="content">
-          
-
-          <svg viewBox="0 0 1320 300">
-            <text x="50%" y="50%" fill="transparent" text-anchor="middle">
-              ACHERON
-            </text>
-          </svg>
-
-          <div class="about">
-            <p>
-              "Lone voyagers in the cosmos are driven by two desires — to tread
-              in the trails of the past and to forge their own way. But under
-              THEIR scrutiny... most end up adhering to the former."
-            </p>
-          </div>
-
-          <box-icon
-            name="chevron-down"
-            class="arrow"
-            color="#ffffff"
-          ></box-icon>
-        </div>
-      </div>
-    </section>
+ <div class="container2">
+        <div class="box box-1"
+        style="--img: url(orgil.jpeg);" data-tex="gani" ></div>
+        <div class="box box-2"
+        style="--img: url(orgil2.jpeg);" data-tex="gani" ></div>
+        <div class="box box-3"
+        style="--img: url(orgil2.jpeg);" data-tex="gani" ></div>
+        <div class="box box-4"
+        style="--img: url(orgil2.jpeg);" data-tex="gani" ></div>
 
     <!-- Box Icon -->
     <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
